--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "version": "1.0.0",
-  "main": "index.js",
+  "private": true,
   "repository": "https://github.com/slawa-popow/webAppBot.git",
   "author": "slawa-popow <110kwt@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.2",
+    "babel-loader": "^9.1.3",
     "concurrently": "^8.2.0",
+    "css-loader": "^6.8.1",
     "nodemon": "^3.0.1",
+    "style-loader": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "scripts": {
-    
+    "front": "webpack",
     "dev:build": "tsc -w",
     "dev:debug": "yarn nodemon --inspect src/index.ts",
     "dev": "concurrently yarn:dev:*"
@@ -26,6 +31,7 @@
     "@types/express-handlebars": "^6.0.0",
     "@types/express-validator": "^3.0.0",
     "@types/mysql": "^2.15.21",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
@@ -33,6 +39,10 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "express-validator": "^7.0.1",
-    "mysql": "^2.18.1"
+    "jquery": "^3.7.0",
+    "mysql": "^2.18.1",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-jquery-ui": "^2.0.1"
   }
 }
