--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "css-loader": "^6.8.1",
     "nodemon": "^3.0.1",
     "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
     "front": "webpack",
